[metadata]
name = console-ctrl
version = 0.1.0
author = Arvin Pan
author_email = exarvin@gmail.com
description = Send CTRL-C event to a target console process WITHOUT causing KeyboardInterrput at the caller side.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arvinpan/console-ctrl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6